# ts-data-generator

./: .gitignore  README.md  data.csv  pyproject.toml  restructure_code_base_plan.txt  slack_message.txt
.github/workflows/: ci.yaml  deploy.yml  test.yml
docs/: _config.yml  advanced.md  anomalies.md  api.md  cli.md  concepts.md  contributing.md  deterministic.md  dimensions.md  guides.md  imputer.md  index.md  trends.md  visualize.md
docs/_includes/: head_custom.html
docs/guides/: anomaly-detection.md  retail.md
etc/data/: sample.csv  sample1.csv  sample2.csv  sample3.csv  sample4.csv
issues/: 001-rng-foundation.md  005-cli-anomalies.md  009-advanced-anomaly-modes.md  prd.md
issues/done/: 002-anomaly-pipeline-point.md  003-missing-data-random-burst.md  004-concept-drift.md  006-holiday-trend.md  007-ar-noise-trend.md  008-markov-trend.md  010-optional-deps.md
notebooks/: aggregate.ipynb  config.json  doc_plot_gen.ipynb  frontpage.ipynb  imputer.ipynb  output.csv  sample.ipynb  sample_config.json  visualize.ipynb
ralph/: once.sh  prompt.md
src/ts_data_generator/: __init__.py  aggregator.py  cli.py  data_gen.py  exceptions.py  plotting.py  random.py
src/ts_data_generator/analyzers/: __init__.py  converter.py
src/ts_data_generator/anomalies/: __init__.py  base.py  drift.py  missing.py  point.py
src/ts_data_generator/core/: __init__.py  dataframe_builder.py
src/ts_data_generator/data/: sample_config.json
src/ts_data_generator/schema/: __init__.py  converter.py  models.py  parser.py  types.py
src/ts_data_generator/transforms/: __init__.py  normalizer.py
src/ts_data_generator/utils/: __init__.py  functions.py  registry.py  trends.py
tests/: conftest.py  test_aggregation.py  test_anomalies.py  test_cli.py  test_constructor.py  test_dataframe_builder.py  test_exceptions.py  test_functions.py  test_generator.py  test_models.py  test_normalizer.py  test_parser.py  test_plotting.py  test_random.py  test_registry.py  test_schema_converter.py  test_trends_holiday.py
tsdata/: .gitignore  README.md  __init__.py  home.html  main.py  pyproject.toml
tsdata/tests/: __init__.py  test_api.py
